@@ -1,6 +1,6 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.11.1
+VERSION=1.11.2
 
 DEPENDENCY="zeda=1.6.36;zm=1.5.1"
 
